<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- provider -->
    <string name="description">Treebolic Dot provides a model from Dot files</string>
    <string name="requires">Treebolic Dot does not require extra data besides the Dot files</string>

    <!-- title -->
    <string name="title_settings">Settings</string>
    <string name="title_activity_app_settings">Application</string>
    <string name="title_query">Run</string>
    <string name="title_source">Choose source</string>
    <string name="title_download">Download</string>
    <string name="title_demo">Demo</string>
    <string name="title_finish">Finish</string>

    <!-- ok/errors -->
    <string name="fail_nullquery">Null query</string>

</resources>